# gamenect_ai_training

./: .env  .env.example  .gitignore  GAMENECT_AI_DOCS.md  README.md  THESIS_DEFENSE_QA.md  pyproject.toml  requirements.txt
.github/workflows/: train_and_deploy.yml
api/: main.py
collectors/: firestore_service.py
gamenect_ai_training.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
models/: model_metadata.json  pairwise_compatibility_model.pkl  pairwise_feature_names.pkl  pairwise_scaler.pkl
pipelines/: dataset_builder.py  feature_engineering.py  model_architecture.py
scripts/: collect_from_firebase.py  evaluate_model.py  plot_model_comparison.py  preprocess_users.py  run_collector.py  run_training_pipeline.sh  test_pairwise_model.py  test_user_model.py  train_real_data.py  train_user_model.py  update_hybrid_test_users.py
services/: data_collector_api.py  telegram_logger.py
tests/: test_pipeline.py
