[project]
name = "gamenect-ai-training"
version = "1.0.0"
description = "Workspace huấn luyện AI matching cho Gamenect"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Gamenect Team" }]
dependencies = [
    "tensorflow-macos==2.15.0",
    "tensorflow-metal==1.1.0",
    "tensorflow-addons==0.21.0",
    "pandas==2.0.3",
    "numpy==1.24.3",
    "scikit-learn==1.3.0",
    "scipy==1.11.4",
    "matplotlib==3.7.2",
    "seaborn==0.12.2",
    "protobuf==4.25.1",
    "firebase-admin==6.2.0",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "pyyaml==6.0",
    "fastapi==0.103.2",
    "uvicorn==0.23.2",
    "pydantic==2.3.0",
    "rich==13.6.0",
    "joblib==1.3.2",
    "geopy==2.4.1",
    "shap==0.43.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["collectors*", "pipelines*", "services*"]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"